--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main {
 
 .intro-section {
   display: flex;
+  flex-direction: row-reverse; 
   align-items: flex-start;
   gap: 20px;
   margin-top: 20px;
